[package]
name = "soralog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
orfail = "1.1.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
