[package]
name = "soralog"
version = "0.1.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A command-line tool for exploring WebRTC SFU Sora log files"
homepage = "https://github.com/sile/soralog"
repository = "https://github.com/sile/soralog"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
orfail = "1.1.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["preserve_order"] }
